Add credential model selection
